[gd_scene load_steps=4 format=3 uid="uid://btkpr3jf3mbkx"]

[ext_resource type="Script" uid="uid://bbksi5d0c2swl" path="res://scenes/ui/GameOver.gd" id="1_flebf"]
[ext_resource type="AudioStream" uid="uid://boqkirsepkx88" path="res://art/audio/sfx/police noise vroom.ogg" id="2_x6o8e"]
[ext_resource type="LabelSettings" uid="uid://tdoxglijt3r0" path="res://scenes/ui/MainMenu.tres" id="4_vfrx6"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 2
layer = 3
script = ExtResource("1_flebf")
game_over_sfx = ExtResource("2_x6o8e")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.34117648, 0.34117648, 0.34117648, 0.50980395)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37254903, 0.07058824, 0.039215688, 0.8156863)

[node name="GameOverText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 93.0
offset_right = 31.0
offset_bottom = 116.0
grow_horizontal = 2
rotation = -0.0008096286
text = "GAME OVER"
label_settings = ExtResource("4_vfrx6")
horizontal_alignment = 1

[node name="OptionsBox" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -51.0
offset_right = -7.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(18, 0)

[node name="RestartButton" type="Button" parent="OptionsBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "RESTART"

[node name="QuitButton" type="Button" parent="OptionsBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT"
